* Sun May 20 - Christophe Dumez <chris@qbittorrent.org> - v2.9.9
    - BUGFIX: More reliable RSS feed parsing (closes #1001777)
    - BUGFIX: Better support for cookies in RSS
    - BUGFIX: Make sure show/hide text in tray icon menu is correct
    - COSMETIC: Improve style of left panel
    - COSMETIC: Never disable properties panel
    - COSMETIC: Make sure first tab is initially selected in options dialog
    - COSMETIC: Fix a few focus issues on Mac OS X

* Sat May 5 2012 - Christophe Dumez <chris@qbittorrent.org> - v2.9.8
    - BUGFIX: Various UI style fixes
    - BUGFIX: Fix compilation with gcc 4.7
    - BUGFIX: Fix possible compilation error with msvc (Windows)
    - BUGFIX: Fix compilation on OS/2
    - I18N: Update Italian translation

* Sun Mar 18 2012 - Christophe Dumez <chris@qbittorrent.org> - v2.9.7
    - BUGFIX: Fix important HTTP request parsing bug (Web UI)

* Sat Mar 17 2012 - Christophe Dumez <chris@qbittorrent.org> - v2.9.6
    - BUGFIX: Fix download first/last pieces state reporting
    - BUGFIX: Fix name of progress column in torrent content panel
    - BUGFIX: Disable system tray icon on Mac OS X
    - BUGFIX: RSS downloader should not ignore "Do not start automatically" rule (closes #946910)
    - BUGFIX: Fix DHT port setting in Web UI (Closes #952182)
    - BUGFIX: Fix possible Web UI authentication problem when using SSL (closes #941343)
    - BUGFIX: Fix possible issues with folder removal when removing a torrent
    - I18N: Add Basque translation

* Sat Feb 18 2012 - Christophe Dumez <chris@qbittorrent.org> - v2.9.5
    - BUGFIX: Fix crash when disabling then reenabling RSS
    - BUGFIX: Fix duplicate torrent detection when adding a magnet link
    - BUGFIX: Fix import of new trackers when adding a torrent with same hash (Closes #747000)
    - BUGFIX: Fix possible redownload of torrents marked as read (Closes #927495)
    - BUGFIX: Properly remove RSS feed settings/history upon feed removal
