@@ -1,3 +1,6 @@
+* Unreleased - Christophe Dumez <chris@qbittorrent.org> - v2.9.10
+    - BUGFIX: Fix possible crash when showing torrent content (closes #1002586)
+
 * Sun May 20 - Christophe Dumez <chris@qbittorrent.org> - v2.9.9
     - BUGFIX: More reliable RSS feed parsing (closes #1001777)
     - BUGFIX: Better support for cookies in RSS
